--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="./dist/components.umd.cjs" defer></script>
+    <script src="./add-stakeholder/dist/components.umd.cjs" defer></script>
 </head>
 <body>
     <add-stakeholder
