--- a/packages/create-request-form/src/app.html
+++ b/packages/create-request-form/src/app.html
@@ -13,7 +13,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
       rel="stylesheet"
     />
-
+    <link rel="icon" href="%sveltekit.assets%/favicon.png" />
     <meta name="theme-color" content="#ffffff" />
     <title>Request Svelte Template</title>
     %sveltekit.head%
